<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_main"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_main"/>

        <item android:id="@+id/nav_knowledge"
            android:icon="@drawable/ic_nav_knowledge"
            android:title="@string/nav_knowledge"/>

        <item android:id="@+id/nav_guide"
            android:icon="@drawable/ic_nav_guide"
            android:title="@string/nav_guide" />

        <item android:id="@+id/nav_project"
            android:icon="@drawable/ic_nav_project"
            android:title="@string/nav_project" />
    </group>
</menu>