<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    style="?attr/bottomSheetStyle"
    android:background="@android:color/background_light">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_favorite"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_star_off"
        android:drawablePadding="@dimen/sheet_horizontal_margin"
        android:text="@string/detail_collect_article"/>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_copy_link"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_copy"
        android:drawablePadding="@dimen/sheet_horizontal_margin"
        android:text="@string/detail_copy_the_link"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_share"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="@dimen/sheet_horizontal_margin"
        android:text="@string/detail_share"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_browser"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_browser"
        android:drawablePadding="@dimen/sheet_horizontal_margin"
        android:text="@string/detail_open_in_system_browser"/>
</LinearLayout>