<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <com.yubin.wanapp.view.ItemView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:show_bottom_line="false"
        app:stub_type="val_right_no"
        app:itemtitle="@string/application_name"/>

    <com.yubin.wanapp.view.ItemView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:show_bottom_line="false"
        app:stub_type="val_right_no"
        app:itemtitle="@string/application_version"/>

    <com.yubin.wanapp.view.ItemView
        android:id="@+id/app_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:show_bottom_line="false"
        app:stub_type="val_right_no"
        app:itemtitle="@string/check_update"/>

    <LinearLayout
        android:id="@+id/github_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/github_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_github" />
        <TextView
            android:id="@+id/github_tv"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_code"/>

    </LinearLayout>




</LinearLayout>