<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent_black"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp"
    tools:context=".activity.login.LoginActivity">

    <ImageView
        android:id="@+id/splash_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_login"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:text="账号："/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_username"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:hint="@string/login_account_hint_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:text="密码：" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_password"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:hint="@string/login_password_hint_text"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:elevation="@dimen/activity_margin_half"
        android:padding="12dp"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/regist_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_text"
        android:textColor="@android:color/holo_blue_light"
        android:layout_gravity="right"
        android:textSize="14sp"/>

</LinearLayout>